scripts/infrautil/lib/testfiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-dump
    app.kubernetes.io/name: http-dump
  name: http-dump
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: http-dump
    app.kubernetes.io/name: http-dump
  type: ClusterIP
